Repackaged code. Not tested yet, could be a bunch of bugs.
TODO:
- Test thoroughly for bugs.
- Fix example scripts in Examples; maybe convert them into jupyter notebooks.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,16 @@
 __pycache__/
 *.py[cod]
 *$py.class
+._*.py
+
+# PyTorch checkpoint files
+*.ckpt
 
 # C extensions
 *.so
+
+# MacOS files
+.DS_Store
 
 # Distribution / packaging
 .Python
