--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
+# Link resources file uploaded to GitHub LFS
 Examples/resources.tar filter=lfs diff=lfs merge=lfs -text
+
+# Ignore Examples/ directory in language statistics
+Examples/ -linguist-detectable
